Tue Aug 15 08:36:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * bin/MakeProjectCreator/config/acedefaults.mpb

        Backout all of the recent MFC changes.

        * bin/MakeProjectCreator/config/ace_opt_mfc.mpb:

        DELETED.

Mon Aug 14 23:34:11 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/TP_Reactor.cpp
        * ace/TP_Reactor.h
        
          Removed all register_handler member functions from these files. 
          This essentially enables the ability to register signal handlers in
          the TP Reactor by implicitly delegating to the select reactor base class.

          Other register_handler methods (not relating to signal handling)
          were explicit delegations to the select reactor base class, present
          only to silence virtual function hiding warnings created by disabling the
          signal related methods.

Mon Aug 14 16:14:56 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * test/Hash_Multi_Map_Manager_Test.cpp
          Address the "no matching function for call" errors.
          
        * ace/Hash_MultiMap_Manager_T.h
          Address the "unsupported xml/html tag" warnings in doxygen build. 

Mon Aug 14 16:00:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * bin/MakeProjectCreator/config/ace_mfc.mpb:
        * bin/MakeProjectCreator/config/ace_opt_mfc.mpb:

          Backout the "Specific" guards.

Mon Aug 14 15:20:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * bin/MakeProjectCreator/config/ace_mfc.mpb:
        * bin/MakeProjectCreator/config/ace_opt_mfc.mpb:

          Specific the macro and don't inherit from mfc for opt.

Mon Aug 14 15:43:12 UTC 2006  Steve Huston  <shuston@riverace.com>

        * tests/Makefile.am: Added Hash_Multi_Map_Manager_Test.

Mon Aug 14 13:33:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/clean.bor:
          Use .inl as file extension to clean instead of .i
